# whiteproto

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  README.md  Taskfile.yml  mypy.ini  pyproject.toml  run_mypy.sh
.github/workflows/: lint.yml
assets/: handshake.puml  transmission.puml
docker/: Dockerfile  build-docker.sh
examples/: client.py  server.py
proto/org/redeyes/: secure.proto
scripts/: clean.py  makebuild.py  ninja_syntax.py
tasks/: compile.yml  lint.yml
whiteproto/: __init__.py  async_executor.py  client.py  compression.py  connection.py  crypto.py  server.py  utils.py
whiteproto/_proto/: __init__.py  parser.py  wrapper.py
