[tool.poetry]
name = "whiteproto"
version = "0.1.0"
description = "Reference implementation of RedEyes Secure Transport Protocol (RSP-5.2022)"
authors = ["Stanislav <ih3xcode@protonmail.com>"]
license = "Proprietary"
include = ["whiteproto/_proto/_compiled/**/*_pb2.py"]

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^4.21.2"
cryptography = "^42.0.4"
coloredlogs = "^15.0.1"
zstd = "^1.5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
wemake-python-styleguide = { git = "https://github.com/wemake-services/wemake-python-styleguide.git" }
pre-commit = "^3.3.2"
types-protobuf = "^4.23.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip = [
        "whiteproto/_proto/_compiled"
]
